--- a/cyxbs-applications/test/src/wasmJsMain/resources/index.html
+++ b/cyxbs-applications/test/src/wasmJsMain/resources/index.html
@@ -14,13 +14,12 @@
 <style>
   body, html {
     height: 100%; /* 确保整个页面高度 */
-    margin: 0; /* 移除默认边距 */
     display: flex;
     flex-direction: column;
   }
   #compose {
-    flex: 1; /* 剩余空间 */
-    width: 100%; /* 横向铺满 */
+    height: 100%;
+    width: 100%;
   }
 </style>
 </html>
