--- a/cyxbs-applications/test/src/wasmJsMain/resources/index.html
+++ b/cyxbs-applications/test/src/wasmJsMain/resources/index.html
@@ -14,6 +14,7 @@
 <style>
   body, html {
     height: 100%; /* 确保整个页面高度 */
+    margin: 0; /* 移除默认边距 */
     display: flex;
     flex-direction: column;
   }
